# claude-collaboration

./: IMPLEMENTATION.md  README.md
.claude/: WORK_STATE.md
artifacts/: SELF.md  SIGNAL.md  TODD.md  WE.md
docs/: stenographer-flow.md
mcp-server/: .gitignore  README.md  pyproject.toml
mcp-server/prompts/: insight_chunk.yaml  insight_extractor.yaml  insight_synthesis.yaml  stenographer.yaml  stenographer_chunk.yaml  stenographer_synthesis.yaml
mcp-server/src/transcript_analyzer/: __init__.py  __main__.py  server.py
mcp-server/src/transcript_analyzer/core/: __init__.py  chunker.py  job_manager.py  ollama.py  parser.py  storage.py
mcp-server/tests/: __init__.py
mcp-server/tests/unit/: test_chunker.py  test_parser.py
scripts/: extract-transcript.sh  insight-extractor.sh  stenographer.sh
transcripts/: genesis-2025-01-18.md
